core/templates/dev/head/css/oppia.css
/* ... */
.oppia-activity-summary-tile-mobile .title-section {
  height: 12em;
  position: relative;
  width: 100%;
}

.oppia-activity-summary-tile.oppia-activity-playlist-tile .title-section {
  display: inline-block;
  height: 7em;
  margin: 16px 0 10px 16px;
  min-width: 163px;
  width: 27%;
}

.oppia-activity-summary-tile.oppia-activity-playlist-tile .summary-section {
  display: inline-block;
  float: right;
  margin-top: 3%;
  width: 67%;
}
.oppia-activity-summary-tile .activity-title,
.oppia-activity-summary-tile-mobile .activity-title {
  bottom: 0;
  color: white;
  font-family: "Capriola", "Roboto", Arial, sans-serif;
  font-size: 1em;
  font-weight: normal;
  hyphens: auto;
  line-height: 1.2em;
  margin: 0.3em 0.5em;
  -ms-hyphens: auto;
  -moz-hyphens: auto;
  overflow-wrap: break-word;
  padding: 0.2em;
  position: absolute;
  word-wrap: break-word;
  -webkit-hyphens: auto;
}
.oppia-activity-summary-tile.oppia-activity-playlist-tile .activity-title {
  font-size: 0.85em;
  text-align: center;
}

@media (min-width: 744px) and (max-width: 895px) {
  .oppia-activity-summary-tile.oppia-activity-playlist-tile .summary-section {
    width: 55%;
  }
}

@media (min-width: 630px) and (max-width: 743px) {
  .oppia-activity-summary-tile.oppia-activity-playlist-tile .thumbnail-image {
    width: 45px;
  }

  .oppia-activity-summary-tile.oppia-activity-playlist-tile .activity-title {
    font-size: 0.75em;
  }

  .oppia-activity-summary-tile.oppia-activity-playlist-tile .title-section {
    height: 7em;
    min-width: 140px;
  }

  .oppia-activity-summary-tile.oppia-activity-playlist-tile .summary-section {
    width: 50%;
  }
}

@media(max-width: 629px) {
  .oppia-activity-summary-tile.oppia-activity-playlist-tile .title-section {
    height: 7em;
    min-width: 115px;
  }

  .oppia-activity-summary-tile.oppia-activity-playlist-tile .summary-section {
    width: 47%;
  }
}

.oppia-activity-summary-tile .exploration-summary-avatars,
.oppia-activity-summary-tile-mobile .exploration-summary-avatars {
  padding-bottom: 4px;
  padding-right: 5px;
  left: 140px;
  position: absolute;
  top: 3px;
  width: 31px;
  z-index: 11;
}

.oppia-activity-summary-tile .exploration-summary-tile-mask {
  background-color: #eee;
  height: 258px;
  left: 0;
  opacity: 0.7;
  position: absolute;
  top: 0;
  width: 200px;
  z-index: 10;
}

.oppia-activity-summary-tile:hover .title-section-mask {
  background-color: #eee;
  height: 100%;
  left: 0;
  opacity: 0.4;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 10;
}
.oppia-activity-summary-tile-mobile:hover .title-section-mask,
.oppia-activity-summary-tile-mobile a:focus .title-section-mask {
  background-color: #eee;
  height: 192px;
  left: 0;
  opacity: 0.4;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 10;
}
.oppia-activity-summary-tile a:focus .title-section-mask {
  background-color: #eee;
  height: 100%;
  left: 0;
  opacity: 0.4;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 10;
}

.oppia-activity-summary-tile .exploration-black-profile,
.oppia-activity-summary-tile-mobile .exploration-black-profile {
  background-color: black;
  border-radius: 50%;
  width: 26px;
  height: 26px;
}

.oppia-activity-summary-tile .exploration-summary-avatars profile-link-image,
.oppia-activity-summary-tile-mobile .exploration-summary-avatars profile-link-image {
  display: block;
  margin-bottom: 3px;
}

.oppia-activity-summary-tile .contributor-indicator,
.oppia-activity-summary-tile-mobile .contributor-indicator {
  border-radius: 10%;
  bottom: 10px;
  height: 13px;
  position: absolute;
  right: 5px;
  text-align: center;
  width: 16px;
}

.oppia-activity-summary-tile .contributor-indicator-background,
.oppia-activity-summary-tile-mobile .contributor-indicator-background {
  background-color: #4078C0;
}

.oppia-activity-summary-tile .all-avatars .num-remaining-avatars,
.oppia-activity-summary-tile-mobile .all-avatars .num-remaining-avatars {
  color: white;
  font-family: 'Roboto', sans-serif;
  font-size: 0.7em;
  font-weight: normal;
  left: 7px;
  position: absolute;
  top: 5px;
}

.oppia-activity-summary-tile .exploration-category,
.oppia-activity-summary-tile-mobile .exploration-category {
  color: #fff;
  font-family: "Capriola", "Roboto", Arial, sans-serif;
  font-size: 0.65em;
  margin-left: 12px;
  margin-top: 8px;
  position: absolute;
  text-transform: uppercase;
}

.oppia-activity-summary-tile .thumbnail-image {
  display: block;
  height: 75px;
  margin: 0 auto;
  position: relative;
  top: 15%;
  width: 75px;
}

.oppia-activity-summary-tile-mobile .thumbnail-image {
  display: block;
  height: 100px;
  margin: 0 auto;
  position: relative;
  top: 15%;
  width: 100px;
}
.oppia-activity-summary-tile .objective {
  display: -webkit-box;
  font-family: "Roboto", Arial, sans-serif;
  font-size: 0.85em;
  height: 70px;
  line-height: 1.26;
  /* `max-height` is calculated as: 1.26 (line-height) * 3 (lines) / 0.85
  (font-size). An additional (1.26 (line-height) * 0.85 (font-size) * 0.25) is added
  to account for letters (like y,j and g) that fall beneath the baseline.
  This is done to limit the text to 3 lines for non-webkit browsers. */
  max-height: 4.71em;
  overflow: hidden;
  padding: 12px;
  text-overflow: ellipsis;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 3; /* Truncating to 3 lines. */
}
.oppia-activity-summary-tile-pre-hover-preview {
  margin-bottom: 35px;
}

.oppia-activity-summary-tile-mobile .objective {
  height: 75px;
  font-family: "Roboto", Arial, sans-serif;
  font-size: 0.85em;
  padding: 12px;
}

.oppia-activity-summary-tile .rating-disabled,
.oppia-activity-summary-tile-mobile .rating-disabled {
  opacity: 0.5;
}

.oppia-activity-summary-tile [section="right-section"],
.oppia-activity-summary-tile-mobile [section="right-section"] {
  display: inline-block;
  float: left;
  height: 80px;
  position: relative;
  text-align: center;
  width: 30%;
}
/* ... */

